--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,10 @@
   "name": "emberapp",
   "dependencies": {
     "ember": "~2.8.0",
-    "ember-cli-shims": "0.1.1"
+    "ember-cli-shims": "0.1.1",
+    "bootstrap": "~3.3.5"
+  },
+  "devDependencies": {
+    "bootstrap": "^3.3.7"
   }
 }
